Fixing intro wrap

--- a/style/css/home.css
+++ b/style/css/home.css
@@ -319,7 +319,7 @@ header {
   padding: 4rem 0; }
   @media only screen and (min-width: 1100px) {
     .intro-wrap {
-      width: 80%;
+      width: 100%;
       margin: 10rem auto;
        } }
 
